# OS_Project

./: Cargo.toml  README.md  set_priority.rs
ProcMaster/: package-lock.json  package.json  vite.config.js
ProcMaster/src/: App.css  App.jsx  processtable.css  processtable.jsx  sysinfo.css  sysinfo.jsx
ProcMaster/src-tauri/: Cargo.toml  tauri.conf.json
ProcMaster/src-tauri/src/: lib.rs  main.rs  overview.rs
src/: IO.rs  Memory.rs  comp.rs  cpuUsage.rs  ctrl.rs  ctrl_proc.rs  main.rs  overview.rs  test.rs
